--- a/Week 8/list.html
+++ b/Week 8/list.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!-- unordered list (bullet points) -->
+
+<!-- <!DOCTYPE html>
 
 <html lang = "en">
     <head>
@@ -10,5 +12,23 @@
             <li>bar</li>
             <li>baz</li>
         </ul>
+    </body>
+</html> -->
+
+
+<!-- ordered list (numbers) -->
+
+<!DOCTYPE html>
+
+<html lang = "en">
+    <head>
+        <title>list</title>
+    </head>
+    <body>
+        <ol>
+            <li>foo</li>
+            <li>bar</li>
+            <li>baz</li>
+        </ol>
     </body>
 </html>
