--- a/Week 8/homepage/index.html
+++ b/Week 8/homepage/index.html
@@ -4,14 +4,12 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <script src="hover-hide.js" type="text/javascript"></script>
+        <!-- <script src="hover-hide.js" type="text/javascript"></script> -->
         <link href="styles.css" rel="stylesheet">
-        <title>hello</title>
+        <title>Hello</title>
     </head>
     <body>
-        <div class="hello">
-            <a href="page2.html">hello.</a>
-            <img src="pexels-rahul-716398.jpg" align="right" alt="lightbulb" id="lightbulb">
-        </div>
+        <img src="pexels-rahul-716398.jpg" id="lightbulb" align="right" alt="lightbulb">
+        <a href="welcome.html" id="hello">Hello?</a>
     </body>
 </html>
