--- a/Week 8/homepage/traveler/index.html
+++ b/Week 8/homepage/traveler/index.html
@@ -6,11 +6,12 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <!-- <script src="hover-hide.js" type="text/javascript"></script> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <link href="styles.css" rel="stylesheet">
+        <script src="hover-hide.js" type="text/javascript"></script>
+        <link id="theme" href="styles-dark.css" rel="stylesheet">
         <title>Hello</title>
     </head>
     <body>
-        <img src="pexels-rahul-716398.jpg" id="lightbulb" align="right" alt="lightbulb">
+        <img src="pexels-rahul-716398-small.jpg" id="lightbulb" align="right" alt="lightbulb">
         <a href="welcome.html" id="hello">Hello?</a>
     </body>
 </html>
