--- a/Week 8/homepage/traveler/welcome.html
+++ b/Week 8/homepage/traveler/welcome.html
@@ -4,31 +4,29 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
+        <link id="theme" href="styles-dark.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="lights-on.js" type="text/javascript"></script>
+        <script src="tohelp.js" type="text/javascript"></script>
         <title>Welcome</title>
     </head>
     <body>
-
         <div id="welcome">
-            <p class="thought">
+            <p class="intro thought">
                 <i>That damned light is always going out.</i> 
             </p>
-            <p>
+            <p class="intro dialogue">
                 Ah! Welcome, welcome, dear traveler. You must have come quite a ways.
             </p>
-            <p class="thought">
+            <p class="intro thought">
                 <i>Not quite sure why anyone would come here by their own volition.</i>
             </p>
-            <p>
+            <p class="intro dialogue">
                 Would you prefer better lighting? I'm sure I could find something to brighten the place up.
-                <button id="light" class="btn btn-outline-warning btn-sm">Yes</button>
-                <button class="dark btn btn-outline-warning btn-sm">No</button>
             </p>
-            <div id="better">
-                I hope everything's to your liking, then.
-            </div>
-        </div>
+            <p>
+                <button class="tohelplight btn btn-outline-warning btn-sm">Yes</button>
+                <button class="tohelp dark btn btn-outline-warning btn-sm">No</button>
+            </p>
     </body>
 </html>
