--- a/Week 8/homepage/traveler/help.html
+++ b/Week 8/homepage/traveler/help.html
@@ -7,8 +7,8 @@
         <link id="theme" href="styles-dark.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="lights-on.js" type="text/javascript"></script>
-        <script src="yes-no.js" type="text/javascript"></script>
-        <title>Navigate</title>
+        <script src="navigate.js" type="text/javascript"></script>
+        <title>Help</title>
     </head>
     <body>
         <div id="welcome">
@@ -16,16 +16,16 @@
                 I hope everything's to your liking, then. 
             </p>
             <p class="thought">
-                <i>If only every time—</i>
+                <i>Eh, you look a bit lost, don't you—</i>
             </p>
             <p class="dialogue">
-                Eh, you look a bit lost, don't you— how can I help you?
+                How can I help you, my friend?
             </p>
             <p>
-                <button class="btn btn-outline-warning btn-sm" id="home">Home</button>
-                <button class="btn btn-outline-warning btn-sm" id="about">About</button>
-                <button class="btn btn-outline-warning btn-sm" id="github">GitHub</button>
-                <button class="btn btn-outline-warning btn-sm" id="linkedin">LinkedIn</button>
+                <button class="home btn btn-outline-warning btn-sm">Home</button>
+                <button class="about btn btn-outline-warning btn-sm">About</button>
+                <button class="github btn btn-outline-warning btn-sm">GitHub</button>
+                <button class="linkedin btn btn-outline-warning btn-sm">LinkedIn</button>
             </p>
         </div>
         <div id="footer">
