--- a/Week 8/homepage/traveler/welcome.html
+++ b/Week 8/homepage/traveler/welcome.html
@@ -7,7 +7,7 @@
         <link id="theme" href="styles-dark.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="lights-on.js" type="text/javascript"></script>
-        <script src="tohelp.js" type="text/javascript"></script>
+        <script src="yes-no.js" type="text/javascript"></script>
         <title>Welcome</title>
     </head>
     <body>
