--- a/Week 8/homepage/traveler/github.html
+++ b/Week 8/homepage/traveler/github.html
@@ -3,34 +3,33 @@
 <html lang="en">
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link id="theme" href="styles-dark.css" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="lights-on.js" type="text/javascript"></script>
-        <script src="navigate.js" type="text/javascript"></script>
         <title>GitHub</title>
     </head>
     <body>
         <div id="welcome">
             <p class="dialogue">
-                I hope everything's to your liking, then. 
+                GitHub! What a lovely place it is, though quite the trek from here.
             </p>
             <p class="thought">
-                <i>Eh, you look a bit lost, don't you—</i>
+                <i>How did you manage to get so off course?</i>
             </p>
             <p class="dialogue">
-                How can I help you, my friend?
+                You'll certainly want to rest up before you head <a href="https://github.com/kariscourey">that way</a>.
             </p>
-            <p>
-                <button class="home btn btn-outline-warning btn-sm">Home</button>
-                <button class="about btn btn-outline-warning btn-sm">About</button>
-                <button class="github btn btn-outline-warning btn-sm">GitHub</button>
-                <button class="linkedin btn btn-outline-warning btn-sm">LinkedIn</button>
+            <p class="thought">
+                <i>Poor soul may be better off <a href="index-again.html" id="return">turning back</a> for the night.</i>
             </p>
         </div>
         <div id="footer">
-            <button class="light btn btn-outline-warning btn-sm">Light</button>
-            <button class="dark btn btn-outline-warning btn-sm">Dark</button>
+            <button class="yes btn btn-outline-warning btn-sm">Lighting</button>
         </div>
     </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="yes-no.js" type="text/javascript"></script>
+    <script src="navigate.js" type="text/javascript"></script>
+    <script src="checktheme.js" type="text/javascript"></script>
+    
 </html>
