--- a/Week 8/homepage/traveler/blub.html
+++ b/Week 8/homepage/traveler/blub.html
@@ -4,22 +4,25 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link id="theme" href="styles-dark.css" rel="stylesheet">
-        <title>Home</title>
+        <title>Blub</title>
     </head>
     <body>
         <div id="welcome">
             <p class="dialogue">
-                Well, it sure has been nice talking with you.
+                Blub... blub... fishy? You must mean Blub Blub Fishy.
             </p>
             <p class="thought">
-                <i>Not many come by these parts.</i>
+                <i>No one has returned from such an expedition in centuries.</i>
             </p>
             <p class="dialogue">
-                Best be <a href="index-again.html">on your way</a>, then.
+                They say the creature lives in the depths just east of here. Best of luck to you with your <a href="fishy.html">voyage</a>.
+            </p>
+            <p class="thought">
+                <i>Not too late <a href="index-again.html" id="return">turn back</a>.</i>
             </p>
         </div>
         <div id="footer">
-            <button class="light btn btn-outline-warning btn-sm">Lighting</button>
+            <button class="yes btn btn-outline-warning btn-sm">Lighting</button>
         </div>
     </body>
 
