--- a/Week 8/homepage/traveler/fishy.html
+++ b/Week 8/homepage/traveler/fishy.html
@@ -4,22 +4,14 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link id="theme" href="styles-dark.css" rel="stylesheet">
-        <title>Home</title>
+        <title>Blub Blub Fishy</title>
     </head>
     <body>
         <div id="welcome">
-            <p class="dialogue">
-                Well, it sure has been nice talking with you.
-            </p>
-            <p class="thought">
-                <i>Not many come by these parts.</i>
-            </p>
-            <p class="dialogue">
-                Best be <a href="index-again.html">on your way</a>, then.
-            </p>
+            <iframe src="https://scratch.mit.edu/projects/654897803/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
         </div>
         <div id="footer">
-            <button class="light btn btn-outline-warning btn-sm">Lighting</button>
+            <button class="yes btn btn-outline-warning btn-sm">Lighting</button>
         </div>
     </body>
 
