--- a/Week 8/homepage/traveler/linkedin.html
+++ b/Week 8/homepage/traveler/linkedin.html
@@ -3,11 +3,7 @@
 <html lang="en">
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link id="theme" href="styles-dark.css" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="lights-on.js" type="text/javascript"></script>
-        <script src="navigate.js" type="text/javascript"></script>
         <title>LinkedIn</title>
     </head>
     <body>
@@ -19,15 +15,21 @@
                 <i>Or somewhere close to it—</i>
             </p>
             <p class="dialogue">
-                I guess I could provide <a href="https://www.linkedin.com/in/kariscourey">a map</a> for your troubles.
+                I suppose I could provide <a href="https://www.linkedin.com/in/kariscourey">a map</a> for your troubles.
             </p>
             <p class="thought">
-                <i>Though it may be best if you turned back from <a href="index-again.html" id="return">where you came</a>.</i>
+                <i>Though it may be best if you turned toward from <a href="index-again.html" id="return">where you came</a>.</i>
             </p>
         </div>
         <div id="footer">
-            <button class="light btn btn-outline-warning btn-sm">Light</button>
-            <button class="dark btn btn-outline-warning btn-sm">Dark</button>
+            <button class="light btn btn-outline-warning btn-sm">Lighting</button>
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="yes-no.js" type="text/javascript"></script>
+        <script src="navigate.js" type="text/javascript"></script>
+        <script src="checktheme.js" type="text/javascript"></script>
+        
     </body>
 </html>
