--- a/Week 8/homepage/traveler/welcome.html
+++ b/Week 8/homepage/traveler/welcome.html
@@ -3,11 +3,7 @@
 <html lang="en">
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link id="theme" href="styles-dark.css" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="lights-on.js" type="text/javascript"></script>
-        <script src="yes-no.js" type="text/javascript"></script>
         <title>Welcome</title>
     </head>
     <body>
@@ -22,11 +18,16 @@
                 <i>Not quite sure why anyone would come here by their own volition.</i>
             </p>
             <p class="intro dialogue">
-                Would you prefer better lighting? I'm sure I could find something to brighten the place up.
+                Would you prefer different lighting? I'm sure we can accomodate you.
             </p>
             <p>
-                <button class="tohelplight btn btn-outline-warning btn-sm">Yes</button>
-                <button class="tohelp dark btn btn-outline-warning btn-sm">No</button>
+                <button class="yes btn btn-outline-warning btn-sm">Yes</button>
+                <button class="no btn btn-outline-warning btn-sm">No</button>
             </p>
+       
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="yes-no.js" type="text/javascript"></script>
+        <script src="checktheme.js" type="text/javascript"></script>
     </body>
 </html>
