Update homepage (improved fishy.html iframe view, decoupled navigation and change theme in switch.js, various updates and style improvements)

--- a/Week 8/homepage/traveler/stop.html
+++ b/Week 8/homepage/traveler/stop.html
@@ -4,22 +4,25 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link id="theme" href="styles-dark.css" rel="stylesheet">
-        <title>Home</title>
+        <title>Stop</title>
     </head>
     <body>
         <div id="welcome">
             <p class="dialogue">
-                Well, it sure has been nice talking with you.
+                WOULD YOU STOP THAT? I'm getting a headache over here!
             </p>
             <p class="thought">
-                <i>Not many come by these parts.</i>
+                <i>How ill-mannered some can be these days.</i>
             </p>
             <p class="dialogue">
-                Best be <a href="index-again.html">on your way</a>, then.
+                I suggest you get <a href="index-again.html">on your way</a>.
+            </p>
+            <p class="thought">
+                <i>And don't let the door hit you—</i>
             </p>
         </div>
         <div id="footer">
-            <button class="switch btn btn-outline-warning btn-sm">Light</button>
+            <!-- <button class="switch btn btn-outline-warning btn-sm">Light</button> -->
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
