--- a/Week 8/homepage/traveler/blub.html
+++ b/Week 8/homepage/traveler/blub.html
@@ -15,21 +15,22 @@
                 <i>No one has returned from such an expedition in centuries.</i>
             </p>
             <p class="dialogue">
-                They say the creature lives in the depths just east of here. Best of luck to you with your <a href="fishy.html">voyage</a>.
-            </p>
+                I should warn you - you'll need the right equipment. If you don't have the right equipment, you won't be able to make the <a href="fishy.html">voyage</a>.
+            </p>    
             <p class="thought">
                 <i>Not too late <a href="index-again.html" id="return">turn back</a>.</i>
             </p>
         </div>
         <div id="footer">
-            <button class="yes btn btn-outline-warning btn-sm">Lighting</button>
+            <button class="switch btn btn-outline-warning btn-sm">Light</button>
         </div>
-    </body>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="yes-no.js" type="text/javascript"></script>
-    <script src="navigate.js" type="text/javascript"></script>
-    <script src="checktheme.js" type="text/javascript"></script>
+    <script src="switch.js"></script>
+    <script src="navigate.js"></script>
+    <script src="checktheme.js"></script>
+
+    </body>
     
 </html>
