--- a/Week 8/homepage/traveler/fishy.html
+++ b/Week 8/homepage/traveler/fishy.html
@@ -7,18 +7,19 @@
         <title>Blub Blub Fishy</title>
     </head>
     <body>
-        <div id="welcome">
-            <iframe src="https://scratch.mit.edu/projects/654897803/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <div>
+            <iframe src="https://scratch.mit.edu/projects/654897803/embed" id="fishy" width="485" height="402" allowfullscreen></iframe>
         </div>
         <div id="footer">
-            <button class="yes btn btn-outline-warning btn-sm">Lighting</button>
+            <button class="switch btn btn-outline-warning btn-sm">Light</button> 
         </div>
-    </body>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="yes-no.js" type="text/javascript"></script>
-    <script src="navigate.js" type="text/javascript"></script>
-    <script src="checktheme.js" type="text/javascript"></script>
+    <script src="switch.js"></script>
+    <script src="navigate.js"></script>
+    <script src="checktheme.js"></script>
+    
+    </body>
     
 </html>
