--- a/Week 8/homepage/traveler/github.html
+++ b/Week 8/homepage/traveler/github.html
@@ -22,14 +22,15 @@
             </p>
         </div>
         <div id="footer">
-            <button class="yes btn btn-outline-warning btn-sm">Lighting</button>
+            <button class="switch btn btn-outline-warning btn-sm">Light</button>
         </div>
-    </body>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="yes-no.js" type="text/javascript"></script>
-    <script src="navigate.js" type="text/javascript"></script>
-    <script src="checktheme.js" type="text/javascript"></script>
+    <script src="switch.js"></script>
+    <script src="navigate.js"></script>
+    <script src="checktheme.js"></script>
+
+    </body>
     
 </html>
