--- a/Week 8/homepage/traveler/welcome-again.html
+++ b/Week 8/homepage/traveler/welcome-again.html
@@ -18,18 +18,19 @@
                 <i>Surely, there couldn't be any other reason for you to return.</i>
             </p>
             <p class="intro dialogue">
-                Say - how does this lighting suit you? I can't quite remember your preference.
+                Say - does this lighting suit you? I can't quite remember your preference.
             </p>
             <p>
-                <button class="no btn btn-outline-warning btn-sm">Yes</button>
-                <button class="yes btn btn-outline-warning btn-sm">No</button>
+                <button class="tohelp btn btn-outline-warning btn-sm">Yes</button>
+                <button class="yes tohelp btn btn-outline-warning btn-sm">No</button>
             </p>
+        </div>
 
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-            <script src="yes-no.js" type="text/javascript"></script>
-            <script src="yes-no.js" type="text/javascript"></script>
-            <script src="checktheme.js" type="text/javascript"></script>
+            <script src="switch.js"></script>
+            <script src="checktheme.js"></script>
 
     </body>
+    
 </html>
