--- a/Week 8/homepage/traveler/welcome.html
+++ b/Week 8/homepage/traveler/welcome.html
@@ -21,13 +21,16 @@
                 Would you prefer different lighting? I'm sure we can accomodate you.
             </p>
             <p>
-                <button class="yes btn btn-outline-warning btn-sm">Yes</button>
-                <button class="no btn btn-outline-warning btn-sm">No</button>
+                <button class="yes tohelp btn btn-outline-warning btn-sm">Yes</button>
+                <button class="tohelp btn btn-outline-warning btn-sm">No</button>
             </p>
-       
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        </div>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="yes-no.js" type="text/javascript"></script>
-        <script src="checktheme.js" type="text/javascript"></script>
-    </body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="switch.js"></script>
+        <script src="checktheme.js"></script>
+
+</body>
+
 </html>
